Getting bored already

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 @import 'base/root';
 @import 'base/reset';
+
+@import 'elements/body';
+
+@import 'components/card';
