--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,16 +1,41 @@
 .card {
     background-color: #f4f4f4;
-    width: 85%;
-    max-width: 350px;
     .card-header {
-        background-color: red;
+        font-size: 1.2em;
     }
     .card-body {
-        background-color: green;
-        .card-image {
-            width: 3em;
-            background-color: white;
-            border-radius: 100vw;
+        background: linear-gradient(5deg, rgb(218, 233, 244), rgb(199, 226, 241));
+        width: 100%;
+        padding: 1em;
+        position: relative;
+        .card-image-container {
+            margin: 0 auto;
+            --image-width: 8rem;
+            position: relative;
+            width: var(--image-width);
+            height: calc(var(--image-width) * 1.25);
+            border-radius: 0 0 100vw 100vw;
+            overflow: hidden;
+            .card-image-inner {
+                position: absolute;
+                background-color: #fff;
+                width: var(--image-width);
+                height: var(--image-width);
+                border-radius: var(--image-width);
+                bottom: 0;
+                img {
+                    display: block;
+                    max-width: 140%;
+                    transform: translate(-14%, -17.5%);
+                }
+            }
         }
+        .card-details {
+            font-size: 1em;
+        }
+    }
+    .card-footer {
+        font-size: .8em;
+        color: #666;
     }
 }
