--- a/scss/elements/_body.scss
+++ b/scss/elements/_body.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: var(--bg-clr);
+    background-color: #fcfdfd;
     color: var(--fg-clr);
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
