--- a/scss/layout/_wrapper.scss
+++ b/scss/layout/_wrapper.scss
@@ -1,5 +1,10 @@
 .wrapper {
-width: max-content;
+    width: max-content;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     max-width: 1180px;
     margin: 0 auto;
 }
